--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>JS</title>
         <script>
 
             // I can write JS code before the closing of </head> tag
@@ -27,6 +27,8 @@
          var a=20;
            
          var fullname= 'AASHUMALI'; //valid
+
+        // var var; //invalid variable name
 
          let father_name= 'govind'; //validname
 
